Added view and template for datiled blog post as well as CSS for the site.

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -15,11 +15,13 @@
 }
 
 h1, h2, h3, h4 {
-  font-family: 'Lobster', cursive;
+  font-family: "Apple SD Gothic Neo",
+  /* "Roboto",
+  sans-serif*/;
 }
 
 .date {
-  color: #828282;
+  color: #777a79;
 }
 
 .save {
